--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -66,6 +66,18 @@ env = LIBVA_DRIVER_NAME,iHD
 # GPU principal: Intel, secundaria: NVIDIA
 env = WLR_DRM_DEVICES,/dev/dri/by-path/pci-0000:00:02.0-card:/dev/dri/by-path/pci-0000:01:00.0-card
 
+windowrulev2 = float, title:^(Eww - wifi_osd)$
+windowrulev2 = noborder, title:^(Eww - wifi_osd)$
+windowrulev2 = nofocus, title:^(Eww - wifi_osd)$
+windowrulev2 = noanim, title:^(Eww - wifi_osd)$ 
+
+# GNOME Calendar flotante, centrado y con tamaño fijo
+windowrulev2 = float, class:^(org.gnome.Calendar)$
+windowrulev2 = size 1000 650, class:^(org.gnome.Calendar)$
+windowrulev2 = center, class:^(org.gnome.Calendar)$
+
+
+
 
 ###################
 ### PERMISSIONS ###
@@ -251,6 +263,10 @@ bind = $mainMod, C, exec, code
 
 bind = SUPER, R, exec, bash -c "pkill waybar; waybar"
 
+# en hyprland.conf
+bind = $mainMod, Z, exec, pkill eww
+
+
 
 
 # Move focus with mainMod + arrow keys
@@ -294,16 +310,24 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, ~/.config/eww/scripts/volume_osd.sh up
-bindel = ,XF86AudioLowerVolume, exec, ~/.config/eww/scripts/volume_osd.sh down
-bindel = ,XF86AudioMute,        exec, ~/.config/eww/scripts/volume_osd.sh mute
 
 
 
 
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+
+
+
+# Brillo
 bindel = ,XF86MonBrightnessUp,   exec, ~/.config/eww/scripts/brightness_osd.sh up
 bindel = ,XF86MonBrightnessDown, exec, ~/.config/eww/scripts/brightness_osd.sh down
+
+# Volumen
+bindel = ,XF86AudioRaiseVolume,  exec, ~/.config/eww/scripts/volume_osd.sh up
+bindel = ,XF86AudioLowerVolume,  exec, ~/.config/eww/scripts/volume_osd.sh down
+bindel = ,XF86AudioMute,         exec, ~/.config/eww/scripts/volume_osd.sh mute
+
 
 
 # Requires playerctl
