--- a/waybar/config
+++ b/waybar/config
@@ -48,10 +48,9 @@
     "tooltip-format": "CPU: {usage}%"
   },
   "memory": {
-    "format": " {percentage}%", // sigue mostrando el %
+    "format": " {percentage}%", 
     "interval": 5,
     "tooltip": true,
-    // {used} y {total} están en GiB, 0.1f = 1 decimal
     "tooltip-format": "Memoria usada: {used:0.1f} GiB"
   },
   "backlight": {
@@ -79,7 +78,6 @@
       ]
     },
     "tooltip": true,
-    // {volume} = volumen %, {desc} = nombre del dispositivo (útil para BT/cascos)
     "tooltip-format": "Volumen: {volume}%\nSalida: {desc}",
     "on-click": "pavucontrol"
   },
@@ -96,9 +94,7 @@
     "tooltip-format-connected": "Bluetooth: conectado ({num_connections} dispositivo/s)\n\n{device_enumerate}",
     "tooltip-format-no-controller": "Bluetooth: sin adaptador disponible",
     "tooltip-format-enumerate-connected": "• {device_alias}",
-    // Click izq: mostrar/ocultar icono del tray
     "on-click": "/home/jheff/.config/waybar/scripts/bluetooth-tray-toggle.sh",
-    // Click der: abrir el panel de Bluetooth
     "on-click-right": "blueman-manager"
   },
   "network": {
@@ -106,11 +102,8 @@
     "format-ethernet": "󰈁",
     "format-disconnected": "󰖪",
     "tooltip": true,
-    // Wi-Fi: SSID, señal e IP
     "tooltip-format-wifi": "Wi-Fi: {essid}\nSeñal: {signalStrength}% ({signaldBm} dBm)\nIP: {ipaddr}/{cidr}",
-    // Ethernet: interfaz e IP
     "tooltip-format-ethernet": "Ethernet: {ifname}\nIP: {ipaddr}/{cidr}",
-    // Desconectado
     "tooltip-format-disconnected": "Sin conexión de red",
     "on-click": "/home/jheff/.config/waybar/scripts/nm-applet-toggle.sh",
     "on-click-right": "nm-connection-editor"
@@ -134,14 +127,11 @@
     ],
     "critical-threshold": 15,
     "tooltip": true,
-    // {capacity} = %, {time} = tiempo estimado (si lo da el sistema)
     "tooltip-format": "Batería: {capacity}%\nTiempo estimado: {time}"
   },
   "clock": {
     "format": " {:%H:%M}",
     "tooltip-format": "{:%A %d de %B de %Y}",
-    // Para que salga en español, asegúrate de tener el locale instalado
-    // y pon el que uses: es_PE.UTF-8 o es_ES.UTF-8, etc.
     "locale": "es_PE.UTF-8",
     "on-click": "gsimplecal",
     "on-click-right": "gnome-calendar",
