--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -8,4 +8,7 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar
+exec-once = eww daemon
+
+exec-once = ~/.config/hypr/scripts/wallpaper.sh
 
