--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,11 +1,11 @@
-cursor #e2e2e9
-cursor_text_color #c5c6d0
+cursor #e5e1e9
+cursor_text_color #c9c5d0
 
-foreground            #e2e2e9
-background            #121318
-selection_foreground  #2a3042
-selection_background  #c0c6dc
-url_color             #b1c5ff
+foreground            #e5e1e9
+background            #141318
+selection_foreground  #312e41
+selection_background  #c9c3dc
+url_color             #c8bfff
 
 # black
 color8   #262626
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #b1c5ff
+color4  #c8bfff
 color12 #a39ec4
 
 # magenta
